# qsymm

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  basics.ipynb  bloch_generator.ipynb  changelog.md  environment-latest.yml  environment-minimal.yml  kdotp_generator.ipynb  kekule.ipynb  kwant_examples.ipynb  model_to_kwant.ipynb  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  symmetry_finder.ipynb
docs/: environment.yml
docs/source/: CITING.md  basics.ipynb  conf.py  index.rst
docs/source/reference/: modules.rst  qsymm.groups.rst  qsymm.hamiltonian_generator.rst  qsymm.linalg.rst  qsymm.model.rst  qsymm.point_group_analysis.rst  qsymm.rst  qsymm.symmetry_finder.rst  qsymm.tests.rst  qsymm.tests.test_hamiltonian_generator.rst  qsymm.tests.test_model.rst  qsymm.tests.test_mutual.rst  qsymm.tests.test_symmetry_finder.rst  qsymm.tests.test_util.rst
docs/source/tutorial/: basics.rst  bloch_generator.rst  kdotp_generator.rst  kekule.rst  symmetry_finder.rst  tutorial.rst
example_notebooks/: bloch_generator.ipynb
qsymm/: __init__.py  _scipy_patch.py  _version.py  characters.py  groups.py  hamiltonian_generator.py  irreps.py  kwant_continuum.py  kwant_integration.py  kwant_linalg_lll.py  kwant_rmt.py  linalg.py  model.py  point_group_analysis.py  symmetry_finder.py
qsymm/json_serialization/: convert_func.py  minimal_model.ipynb  model.json
qsymm/tests/: test_groups.py  test_hamiltonian_generator.py  test_kwant_integration.py  test_model.py  test_mutual.py  test_symmetry_finder.py  test_util.py
wire/: combine.py  funcs.py
