[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qsymm"
description = "Symmetry finder and symmetric Hamiltonian generator"
readme = "README.md"
license = {text = "BSD"}
authors = [
    {name = "Qsymm authors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.16.2",
    "scipy>=1.1",
    "sympy>=1.3.0",
    "tinyarray>=1.2.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://gitlab.kwant-project.org/qt/qsymm"
Repository = "https://gitlab.kwant-project.org/qt/qsymm"
Documentation = "https://qsymm.readthedocs.io/"

[project.optional-dependencies]
kwant = ["kwant"]
test = ["pytest"]

[tool.setuptools]
packages = ["qsymm"]

[tool.setuptools_scm]
write_to = "qsymm/_static_version.py"

[tool.pytest.ini_options]
addopts = "--verbose"
filterwarnings = [
    "error",
    # Remove once we rely on scipy v1.5 (maybe earlier)
    "ignore:can't resolve package from __spec__ or __package__:ImportWarning",
    "ignore:the matrix subclass is not the recommended way to represent matrices:PendingDeprecationWarning",
    # Remove once sympy fixes how it uses distutils
    "ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning",
    # Remove once this does not need to be ignored
    "ignore:np\\.asscalar\\(a\\) is deprecated since NumPy v1\\.16, use a\\.item\\(\\) instead:DeprecationWarning",
]

[tool.codespell]
skip = "*.svg"
ignore-words-list = "groth,tru,ot,coo,fo"
