[build-system]
requires = ["hatchling>=1.25", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qsymm"
description = "Symmetry finder and symmetric Hamiltonian generator"
readme = "README.md"
license = {text = "BSD"}
authors = [
    {name = "Qsymm authors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "sympy>=1.13",
    "tinyarray>=1.2.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://gitlab.kwant-project.org/qt/qsymm"
Repository = "https://gitlab.kwant-project.org/qt/qsymm"
Documentation = "https://qsymm.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "--verbose"
filterwarnings = [
    "error",
    # Remove once we rely on scipy v1.5 (maybe earlier)
    "ignore:can't resolve package from __spec__ or __package__:ImportWarning",
    "ignore:the matrix subclass is not the recommended way to represent matrices:PendingDeprecationWarning",
    # Remove once sympy fixes how it uses distutils
    "ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning",
    # Remove once this does not need to be ignored
    "ignore:np\\.asscalar\\(a\\) is deprecated since NumPy v1\\.16, use a\\.item\\(\\) instead:DeprecationWarning",
]

[tool.codespell]
skip = "*.svg"
ignore-words-list = "groth,tru,ot,coo,fo"

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation.env]
# Disable multithreading to avoid oversubscription in CI and other environments
OPENBLAS_NUM_THREADS = "1"
OMP_NUM_THREADS = "1"
MKL_NUM_THREADS = "1"
MKL_DYNAMIC = "FALSE"


[tool.pixi.pypi-dependencies]
qsymm = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
numpy = ">=2.0"
scipy = ">=1.13"
sympy = ">=1.13"
tinyarray = ">=1.2.4"
hatchling = ">=1.25"
hatch-vcs = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
minimal = { features = ["test", "versions-min"], solve-group = "test-min" }
latest = { features = ["test", "versions-latest"], solve-group = "test-latest" }

[tool.pixi.tasks]
tests = "pytest qsymm --verbose"
pre-commit = "pixi lock --check"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.4.2,<9"
pytest-cov = ">=7.0.0,<8"
pytest-flakes = ">=4.0.5,<5"
pytest-pep8 = ">=1.0.6,<2"
[tool.pixi.feature.versions-min]
solve-strategy = "lowest-direct"

[tool.pixi.feature.versions-latest]
solve-strategy = "highest"

[tool.pixi.feature.test.tasks]
test = "pytest qsymm --verbose"
test-coverage = "pytest qsymm --verbose --cov=qsymm --cov-report=term --cov-report=xml:coverage.xml --cov-report=html:htmlcov --junitxml=junit.xml"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
jupyter_sphinx = "*"
sphinx_rtd_theme = "*"
m2r2 = "*"
lxml-html-clean = "*"

[tool.pixi.feature.docs.tasks]
docs = "sphinx-build -b html docs/source docs/build/html"
docs-build = "sphinx-build -b html docs/source docs/build/html"
